LPS-64048 - Align alert to display correctly in portlet to hide button

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
@@ -1,4 +1,5 @@
 .lfr-alert-container {
+	left: 0;
 	position: absolute;
 	right: auto;
 	top: auto;
